# task_scheduler

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  excel-integration.yml  release.yml
bins/agent/: Cargo.toml
bins/agent/src/: config.rs  ledger.rs  main.rs  parameter_bindings.rs  proxy.rs
bins/coordinator/: Cargo.toml
bins/coordinator/src/: api.rs  auth.rs  background.rs  collection_runtime.rs  config.rs  control.rs  health.rs  main.rs  management.rs  state.rs  ui.rs
bins/coordinator/tests/: protocol_simulation.rs
bins/task-executor/: Cargo.toml
bins/task-executor/src/: main.rs
bins/task-executor/tests/: command.rs  excel_windows.rs
bins/taskctl/: Cargo.toml
bins/taskctl/src/: main.rs
crates/scheduler-core/: Cargo.toml
crates/scheduler-core/src/: adapter.rs  bindings.rs  blueprint.rs  collection.rs  crypto.rs  dashboard.rs  domain.rs  health.rs  lib.rs  observability.rs  schedule.rs
crates/scheduler-core/tests/: cron_utc_oracle.rs  health_simulation.rs  model_simulation.rs  published_schemas.rs
crates/scheduler-protocol/: Cargo.toml  build.rs
crates/scheduler-protocol/proto/: control.proto
crates/scheduler-protocol/src/: lib.rs
crates/scheduler-store/: Cargo.toml
crates/scheduler-store/src/: blueprints.rs  collection.rs  dashboard.rs  health.rs  lib.rs  observability.rs
crates/scheduler-store/tests/: deterministic_simulation.rs  pagination_indexes.rs
crates/scheduler-telemetry/: Cargo.toml
crates/scheduler-telemetry/src/: lib.rs
deploy/windows/: Register-Agent.ps1
docs/: api.md  architecture.md  configuration.md  connectors.md  installation.md  observability.md  operations.md  releases.md  tasks.md  testing.md
examples/: connectors.example.yaml
examples/blueprints/: crash.yaml  echo.yaml  excel-macro.yaml  fail.yaml  missing-command.yaml  noisy.yaml  process-id-secure.yaml  process-id.yaml  recovery.yaml  sleep.yaml  timeout.yaml
examples/connectors/process-id-secure-odata/: Cargo.toml  README.md  connector.example.yaml  odata-workbook.example.json
examples/connectors/process-id-secure-odata/src/: main.rs
examples/parameter-collections/: monthly-reports.example.json
examples/parameters/: echo.json  excel-macro.json  process-id-secure.json  process-id.json
examples/schedules/: echo.example.json  echo.example.yaml  monthly-collection.example.yaml  process-id-secure-odata.example.yaml
migrations/: 0001_initial.sql  0002_retry_attempt_baseline.sql  0003_attempt_diagnostics.sql  0004_parameter_collections.sql  0005_health_evidence.sql  0006_dashboard_blueprints_stats.sql  0007_pagination_indexes.sql  0008_node_processing_and_run_filter.sql  0009_authoritative_observability.sql  0010_collection_item_state_events.sql
schemas/: blueprint-v1.schema.json  connectors-v1.schema.json  parameter-collection-v1.schema.json  schedule-v1.schema.json
scripts/: dev-local.sh  test-simulations.sh
