[workspace]
resolver = "2"
members = [
    "crates/scheduler-core",
    "crates/scheduler-protocol",
    "crates/scheduler-store",
    "crates/scheduler-telemetry",
    "bins/coordinator",
    "bins/agent",
    "bins/task-executor",
    "bins/taskctl",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
askama = "0.14"
async-trait = "0.1"
axum = { version = "0.8", features = ["form", "json", "macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1.10"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
cron = "0.15"
futures = "0.3"
hex = "0.4"
html-escape = "0.2"
http = "1.2"
fs2 = "0.4"
jsonschema = "0.33"
libc = "0.2"
opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "logs", "metrics", "trace", "tls-ring"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
prost = "0.14"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate", "macros"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
zeroize = "1.8"
