[package]
name = "scheduler-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
hex.workspace = true
hmac.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
