[package]
name = "scheduler-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
prost.workspace = true
serde.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
