[package]
name = "scheduler-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
fs2.workspace = true
rand.workspace = true
scheduler-core = { path = "../scheduler-core" }
scheduler-telemetry = { path = "../scheduler-telemetry" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
