[package]
name = "process-id-secure-odata-connector"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tower.workspace = true
